--- a/index.html
+++ b/index.html
@@ -141,6 +141,13 @@
 
     loadData();
   </script>
+  <div style="background: #fff; padding: 20px; margin-top: 40px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+  <h3>Langkah Pengajuan kredit</h3>
+  <ol>
+    <li>Klik Hubungi Admin</li>
+    <li>Jkomunikasi menggunakan Watshapp pilih salah satu skema pembelian</li>
+    </ol>
+</div>
   
     <h2>Bagaimana Caranya</h2>
   
