--- a/index.html
+++ b/index.html
@@ -145,13 +145,12 @@
   <h3>Langkah Pengajuan kredit</h3>
   <ol>
     <li>Klik Hubungi Admin</li>
-    <li>Jkomunikasi menggunakan Watshapp pilih salah satu skema pembelian</li>
+    <li>Tentukan salah satu skema pembelian, komunikasi menggunakan Watshapp</li>
     </ol>
 </div>
   
-    <h2>Bagaimana Caranya</h2>
-  
-  <h3>1. Cara Pertama</h3>
+    <h2>Skema Pembelian</h2>
+    <h3>1. Cara Pertama</h3>
   <ol type="a">
     <li>Tunjukkan ke kami barang apa yang Anda perlukan, di mana tokonya, berapa harganya, dan detail lainnya.</li>
     <li>Kami datang ke toko yang Anda tunjukkan.</li>
