--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   <div style="background: #fff; padding: 20px; margin-top: 40px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
   <h3>Langkah Pengajuan kredit</h3>
   <ol>
-    <li>Klik Hubungi Admin</li>
+    <li>Chat Admin</li>
     <li>Tentukan salah satu skema pembelian, komunikasi menggunakan Watshapp</li>
     </ol>
 </div>
