--- a/index.html
+++ b/index.html
@@ -108,8 +108,9 @@
   <button onclick="loadData()">Refresh Data</button>
   <div class="container" id="data-container"></div>
 
-  <a href="https://wa.me/6282352680715?text=Assalamualaikum%0ASaya%0ANama%20%3A%20%0AAlamat%3A20%%0ATertarik%20untuk%20kredit%20barang%2C%20mohon%20hubungi%20ya..%0ATerima%20kasih" 
-     target="_blank" 
+<a href="https://wa.me/6282352680715?text=Assalamualaikum%0ASaya%0ANama%20%3A%0AAlamat%20%3A%0ASaya%20tertarik%20untuk%20kredit%20barang%2C%20mohon%20hubungi%20saya%20ya...%0AAjzkro" target="_blank">
+  Hubungi via WhatsApp
+</a>
      id="wa-button">💬 Chat Admin Widiya</a>
 
   <script defer>
