--- a/index.html
+++ b/index.html
@@ -108,8 +108,14 @@
   <button onclick="loadData()">Refresh Data</button>
   <div class="container" id="data-container"></div>
 
-<a href="https://wa.me/6282352680715?text=Assalamualaikum%0ASaya%0ANama%20%3A%0AAlamat%20%3A%0ASaya%20tertarik%20untuk%20kredit%20barang%2C%20mohon%20dihubungi%20ya...%0AAjzkro" target="_blank">
-       id="wa-button">💬 Chat Admin Widiya</a>
+  <a 
+  id="wa-button"
+  href="https://wa.me/6282352680715?text=Assalamualaikum%0ASaya%0ANama%20%3A%0AAlamat%20%3A%0ASaya%20tertarik%20untuk%20kredit%20barang%2C%20mohon%20dihubungi%20ya...%0AAjzkro" 
+  target="_blank"
+  style="display:inline-block; background-color:#25D366; color:white; padding:10px 20px; text-decoration:none; border-radius:8px;">
+  💬 Chat Admin Widiya
+</a>
+
 
   <script defer>
     async function loadData() {
