--- a/index.html
+++ b/index.html
@@ -129,8 +129,7 @@
     <h2>Kredit Syariah Sangatta</h2>
     <p>Kredit syariah dengan akad Murabahan: Transaksi transparan pembeli dan penjual saling mengetahui Harga Modal dan keuntungan.</p>
     <p>Kredit syariah adalah solusi keuangan sesuai prinsip Islam, tanpa bunga (riba) dan spekulasi.</p>
-    <p>Kami menyediakan skema cicilan transparan, harga tetap dari awal, diawasi oleh tim paham syariah.</p>
-    <p>Setelah isi form, klik Kirim lalu tombol "Refresh Data" untuk melihat simulasi cicilan Anda.</p>
+    <p>Isi forms simulasi cicilan Anda.</p>
   </div>
 
   <div class="container">
