--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -126,7 +127,7 @@
   </a>
 
   <div class="info-box">
-    <h2>Kredit Syariah Sangatta</h2>
+    <h2>( KSS ) Kredit Syariah Sangatta</h2>
     <p>Kredit syariah dengan akad Murabahan: Transaksi transparan pembeli dan penjual saling mengetahui Harga Modal dan keuntungan.</p>
     <p>Kredit syariah adalah solusi keuangan sesuai prinsip Islam, tanpa bunga (riba) dan spekulasi.</p>
     <p>Isi forms simulasi cicilan Anda.</p>
@@ -149,16 +150,6 @@
     <div id="hasilCicilan"></div>
   </div>
 
-<div style="background: #fff; padding: 20px; margin-top: 40px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-  <h3>Syarat Kredit</h3>
-  <ol>
-    <li>Amanah</li>
-    <li>Dapat dihubungi</li>
-    <li>Berpenghasilan</li>
-    <li>Domisili di Sangatta atau sekitarnya</li>
-    <li>Lain-lain sesuai kesepakatan</li>
-  </ol>
-</div>
 
 <div style="background: #fff; padding: 20px; margin-top: 40px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
   <h3>Langkah Pengajuan Kredit</h3>
@@ -191,6 +182,34 @@
       <li>Anda meminta kami untuk mencarikan barang.</li>
       <li>Setelah barang kami dapatkan, kami akan membuat kesepakatan dengan Anda.</li>
       <li>Barang kami beli dan kami jual kepada Anda dengan harga yang disepakati.</li>
+    </ol>
+  </div>
+
+  <div class="steps">
+    <h3>Kemudahan yang didapatkan</h3>
+    <ol>
+      <li>Boleh Tanpa DP/Uang muka</li>
+      <li>jika menggunakan DP akan meringankan cicilan bulanan</li>
+      <li>DP menjadi wajib jika disyaratkan oleh tim survei</li>
+    </ol>
+ </div>
+ <div class="steps">
+    <h3>Syarat Pengajuan kredit</h3>
+    <ol>
+      <li>Amanah</li>
+      <li>Bisa di hubungi</li>
+      <li>Memiliki WA aktif</li>
+      <li>Domisili di sangatta atau sekitarnya</li>
+      <li>Siap melakukan pembayaran tepat waktu Via transfer pilih</li>
+      <ol type="a">
+        <li>BRI</li>
+        <li>BSI</li>
+      </ol>
+      <li>Siap dibuatkan grup wa peserta 2 orang</li>
+      <ol type="a">
+        <li>Pemohon</li>
+        <li>Admin KSS (Kredit Syariah Sangatta)</li>
+      </ol>
     </ol>
   </div>
 
@@ -233,6 +252,8 @@
         <p><b>Batas Akhir Cicilan:</b> ${batasAkhir}</p>
       `;
     }
+
+ 
   </script>
 </body>
 </html>
