--- a/index.html
+++ b/index.html
@@ -167,21 +167,21 @@
     <ol type="a">
       <li>Tunjukkan ke kami barang apa yang Anda perlukan, di mana tokonya, berapa harganya, dan detail lainnya.</li>
       <li>Kami datang ke toko yang Anda tunjukkan.</li>
-      <li>Kami membeli barang tersebut dan menjualnya kepada Anda dengan harga yang disepakati.</li>
+      <li>Kami membeli barang tersebut dan menjualnya ke Anda dengan harga sesuai hasil perhitungan</li>
       <li>Anda tinggal mengambil barang tersebut ke kami, atau barang kami antar ke rumah.</li>
     </ol>
 
     <h3>2. Cara Kedua</h3>
     <ol type="a">
       <li>Anda bersama kami mencari barang ke toko.</li>
-      <li>Barang pilihan Anda kami beli dan langsung kami jual kepada Anda dengan harga yang disepakati.</li>
+      <li>Barang pilihan Anda kami beli dan langsung kami jual ke Anda dengan harga sesuai hasil perhitungan.</li>
     </ol>
 
     <h3>3. Cara Ketiga</h3>
     <ol type="a">
       <li>Anda meminta kami untuk mencarikan barang.</li>
       <li>Setelah barang kami dapatkan, kami akan membuat kesepakatan dengan Anda.</li>
-      <li>Barang kami beli dan kami jual kepada Anda dengan harga yang disepakati.</li>
+      <li>Barang kami beli dan kami jual ke Anda harga sesuai hasil perhitungan</li>
     </ol>
   </div>
 
@@ -200,6 +200,7 @@
       <li>Bisa di hubungi</li>
       <li>Memiliki WA aktif</li>
       <li>Domisili di sangatta atau sekitarnya</li>
+      <li>Menginfokan jika pindah alamat atau ganti no HP</li>
       <li>Siap melakukan pembayaran tepat waktu Via transfer pilih</li>
       <ol type="a">
         <li>BRI</li>
