--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="description" content="Kredit Syariah di Sangatta dengan prinsip transparansi dan tanpa riba" />
-  <title>Data Kredit Syariah</title>
+  <title>Kredit Syariah</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -121,7 +121,7 @@
 
   <a 
     id="wa-button"
-    href="https://wa.me/6282352680715?text=Assalamualaikum%0ASaya%0ANama%20%3A%0AAlamat%20%3A%0ASaya%20tertarik%20untuk%20kredit%20barang%2C%20mohon%20dihubungi%20ya...%0AAjzkro" 
+    href="https://wa.me/6282352680715?text=Assalamualaikum%0ASaya%0ANama%20%3A%20%0Abisakah%20saya%20mendapatkan%20info%20selengkapnya%20tentang%20kredit..%0Aterima%20kasih" 
     target="_blank">
     💬 Chat Admin Widiya
   </a>
@@ -129,12 +129,12 @@
   <div class="info-box">
     <h2>( KSS ) Kredit Syariah Sangatta</h2>
     <p>Kredit syariah dengan akad Murabahan: Transaksi transparan pembeli dan penjual saling mengetahui Harga Modal dan keuntungan.</p>
-    <p>Kredit syariah adalah solusi keuangan sesuai prinsip Islam, tanpa bunga (riba) dan spekulasi.</p>
-    <p>Isi forms simulasi cicilan Anda.</p>
+    <p>Akad jual beli, tanpa riba bunga</p>
+    <p>Harga tetap dari awal</p>
   </div>
 
   <div class="container">
-    <h2>Simulasi Kredit</h2>
+    <h2>Simulasi Cicilan</h2>
 
     <label for="hargaBarang">Harga Barang:</label>
     <input type="number" id="hargaBarang" placeholder="Contoh: 10000000">
@@ -165,10 +165,10 @@
 
     <h3>1. Cara Pertama</h3>
     <ol type="a">
-      <li>Tunjukkan ke kami barang apa yang Anda perlukan, di mana tokonya, berapa harganya, dan detail lainnya.</li>
-      <li>Kami datang ke toko yang Anda tunjukkan.</li>
+      <li>Beritahu kami barang yang Anda butuhkan, toko dan harganya.</li>
+      <li>Kami datang ke toko untuk membeli sesuai pilihan anda</li>
       <li>Kami membeli barang tersebut dan menjualnya ke Anda dengan harga sesuai hasil perhitungan</li>
-      <li>Anda tinggal mengambil barang tersebut ke kami, atau barang kami antar ke rumah.</li>
+      <li>Anda bisa ambil di tempat kami, atau barang kami antar ke rumah anda.</li>
     </ol>
 
     <h3>2. Cara Kedua</h3>
@@ -181,7 +181,7 @@
     <ol type="a">
       <li>Anda meminta kami untuk mencarikan barang.</li>
       <li>Setelah barang kami dapatkan, kami akan membuat kesepakatan dengan Anda.</li>
-      <li>Barang kami beli dan kami jual ke Anda harga sesuai hasil perhitungan</li>
+      <li>Barang kami beli dan kami jual ke Anda dengan harga sesuai hasil perhitungan</li>
     </ol>
   </div>
 
