--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
   <a 
     id="wa-button"
-    href="https://wa.me/6282352680715?text=Assalamualaikum%0ASaya%0ANama%20%3A%20%0Abisakah%20saya%20mendapatkan%20info%20selengkapnya%20tentang%20kredit..%0Aterima%20kasih" 
+    href="https://wa.me/6282352680715?text=Assalamualaikum%0ASaya%0ANama%20%3A%20%0Abisakah%20saya%20mendapatkan%20info%20selengkapnya%20tentang%20kredit..%0AAjkro" 
     target="_blank">
     💬 Chat Admin Widiya
   </a>
@@ -129,8 +129,10 @@
   <div class="info-box">
     <h2>( KSS ) Kredit Syariah Sangatta</h2>
     <p>Kredit syariah dengan akad Murabahan: Transaksi transparan pembeli dan penjual saling mengetahui Harga Modal dan keuntungan.</p>
-    <p>Akad jual beli, tanpa riba bunga</p>
+    <p>Akad jual beli</p>
     <p>Harga tetap dari awal</p>
+    <p>tanpa riba bunga</p>
+    <p>Tanpa penyerahan uang</p>
   </div>
 
   <div class="container">
@@ -183,6 +185,13 @@
       <li>Setelah barang kami dapatkan, kami akan membuat kesepakatan dengan Anda.</li>
       <li>Barang kami beli dan kami jual ke Anda dengan harga sesuai hasil perhitungan</li>
     </ol>
+    <h3>3. Cara Keempat</h3>
+    <ol type="a">
+      <li>Anda survei ke toko yang menerima pembayaran transfer</li>
+      <li>sampaikan specifikasi barang dan harganya, kami akan membeli dengan pembayaran transfer ke toko.</li>
+      <li>Barang kami beli dan kami jual ke Anda dengan harga sesuai hasil perhitungan</li>
+    </ol>
+  
   </div>
 
   <div class="steps">
